--- a/refs.bib
+++ b/refs.bib
@@ -6,6 +6,47 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{merz2021clustering,
+  title={The clustering of the SDSS-IV extended Baryon Oscillation Spectroscopic Survey quasar sample: testing observational systematics on the Baryon Acoustic Oscillation measurement},
+  author={Merz, Grant and Rezaie, Mehdi and Seo, Hee-Jong and Neveux, Richard and Ross, Ashley J and Beutler, Florian and Percival, Will J and Mueller, Eva and Gil-Mar{\'\i}n, H{\'e}ctor and Rossi, Graziano and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={506},
+  number={2},
+  pages={2503--2517},
+  year={2021},
+  publisher={Oxford University Press}
+}
+
+@article{aghanim2020planck,
+  title={Planck 2018 results-VI. Cosmological parameters},
+  author={Aghanim, Nabila and Akrami, Yashar and Ashdown, Mark and Aumont, J and Baccigalupi, C and Ballardini, M and Banday, AJ and Barreiro, RB and Bartolo, N and Basak, S and others},
+  journal={Astronomy \& Astrophysics},
+  volume={641},
+  pages={A6},
+  year={2020},
+  publisher={EDP sciences}
+}
+
+
+@article{rezaie2021primordial,
+  title={Primordial non-Gaussianity from the completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey--I: Catalogue preparation and systematic mitigation},
+  author={Rezaie, Mehdi and Ross, Ashley J and Seo, Hee-Jong and Mueller, Eva-Maria and Percival, Will J and Merz, Grant and Katebi, Reza and Bunescu, Razvan C and Bautista, Julian and Brownstein, Joel R and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={506},
+  number={3},
+  pages={3439--3454},
+  year={2021},
+  publisher={Oxford University Press}
+}
+
+@article{mueller2022primordial,
+  title={Primordial non-Gaussianity from the Completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey II: Measurements in Fourier Space with optimal weights},
+  author={Mueller, Eva-Maria and Rezaie, Mehdi and Percival, Will J and Ross, Ashley J and Ruggeri, Rossana and Seo, Hee-Jong and Gil-Mar{\'\i}n, H{\'e}ctor and Bautista, Julian and Brownstein, Joel R and Dawson, Kyle and others},
+  year={2022},
+  journal={Monthly Notices of the Royal Astronomical Society}
+}
+
+
 @ARTICLE{schmittfull2018PhRvD,
        author = {{Schmittfull}, Marcel and {Seljak}, Uro{\v{s}}},
         title = "{Parameter constraints from cross-correlation of CMB lensing with galaxy clustering}",
@@ -23,6 +64,190 @@ archivePrefix = {arXiv},
  primaryClass = {astro-ph.CO},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2018PhRvD..97l3540S},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@book{weinberg2008cosmology,
+  title={Cosmology},
+  author={Weinberg, Steven},
+  year={2008},
+  publisher={OUP Oxford}
+}
+
+@article{kofman1994reheating,
+  title={Reheating after inflation},
+  author={Kofman, Lev and Linde, Andrei and Starobinsky, Alexei A},
+  journal={Physical Review Letters},
+  volume={73},
+  number={24},
+  pages={3195},
+  year={1994},
+  publisher={APS}
+}
+
+@article{bassett2006inflation,
+  title={Inflation dynamics and reheating},
+  author={Bassett, Bruce A and Tsujikawa, Shinji and Wands, David},
+  journal={Reviews of Modern Physics},
+  volume={78},
+  number={2},
+  pages={537},
+  year={2006},
+  publisher={APS}
+}
+
+@article{guth2005inflationary,
+  title={Inflationary cosmology: Exploring the universe from the smallest to the largest scales},
+  author={Guth, Alan H and Kaiser, David I},
+  journal={Science},
+  volume={307},
+  number={5711},
+  pages={884--890},
+  year={2005},
+  publisher={American Association for the Advancement of Science}
+}
+
+@book{lyth2009primordial,
+  title={The primordial density perturbation: Cosmology, inflation and the origin of structure},
+  author={Lyth, David H and Liddle, Andrew R},
+  year={2009},
+  publisher={Cambridge University Press}
+}
+
+@article{de2017next,
+  title={Next non-Gaussianity frontier: What can a measurement with $\sigma$ (f NL)≲ 1 tell us about multifield inflation?},
+  author={de Putter, Roland and Gleyzes, J{\'e}r{\^o}me and Dor{\'e}, Olivier},
+  journal={Physical Review D},
+  volume={95},
+  number={12},
+  pages={123507},
+  year={2017},
+  publisher={APS}
+}
+
+@article{baldauf2011galaxy,
+  title={Galaxy bias and non-linear structure formation in general relativity},
+  author={Baldauf, Tobias and Seljak, Uro{\v{s}} and Senatore, Leonardo and Zaldarriaga, Matias},
+  journal={Journal of Cosmology and Astroparticle Physics},
+  volume={2011},
+  number={10},
+  pages={031},
+  year={2011},
+  publisher={IOP Publishing}
+}
+
+@article{baldauf2011primordial,
+  title={Primordial non-Gaussianity in the bispectrum of the halo density field},
+  author={Baldauf, Tobias and Seljak, Uro{\v{s}} and Senatore, Leonardo},
+  journal={Journal of Cosmology and Astroparticle Physics},
+  volume={2011},
+  number={04},
+  pages={006},
+  year={2011},
+  publisher={IOP Publishing}
+}
+
+@article{de2019integral,
+  title={Integral constraints in spectroscopic surveys},
+  author={De Mattia, Arnaud and Ruhlmann-Kleider, Vanina},
+  journal={Journal of Cosmology and Astroparticle Physics},
+  volume={2019},
+  number={08},
+  pages={036},
+  year={2019},
+  publisher={IOP Publishing}
+}
+
+
+@article{peacock1991large,
+  title={The large-scale clustering of radio galaxies},
+  author={Peacock, JA and Nicholson, D},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={253},
+  number={2},
+  pages={307--319},
+  year={1991},
+  publisher={The Royal Astronomical Society}
+}
+
+
+@article{giannantonio2014improved,
+  title={Improved primordial non-Gaussianity constraints from measurements of galaxy clustering and the integrated Sachs-Wolfe effect},
+  author={Giannantonio, Tommaso and Ross, Ashley J and Percival, Will J and Crittenden, Robert and Bacher, David and Kilbinger, Martin and Nichol, Robert and Weller, Jochen},
+  journal={Physical Review D},
+  volume={89},
+  number={2},
+  pages={023511},
+  year={2014},
+  publisher={APS}
+}
+
+@INPROCEEDINGS{Heinrich2022AAS...24020203H,
+       author = {{Heinrich}, Chen and {Dor{\'e}}, Olivier},
+        title = "{Constraining primordial non-Gaussianities with SPHEREx}",
+    booktitle = {American Astronomical Society Meeting Abstracts},
+         year = 2022,
+       series = {American Astronomical Society Meeting Abstracts},
+       volume = {54},
+        month = jun,
+          eid = {202.03},
+        pages = {202.03},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022AAS...24020203H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@article{huterer2013calibration,
+  title={Calibration errors unleashed: effects on cosmological parameters and requirements for large-scale structure surveys},
+  author={Huterer, Dragan and Cunha, Carlos E and Fang, Wenjuan},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={432},
+  number={4},
+  pages={2945--2961},
+  year={2013},
+  publisher={The Royal Astronomical Society}
+}
+
+@article{riquelme2022primordial,
+  title={Primordial non-Gaussianity with Angular correlation function: Integral constraint and validation for DES},
+  author={Riquelme, Walter and Avila, Santiago and Garc{\'\i}a-Bellido, Juan and Porredon, Anna and Ferrero, Ismael and Chan, Kwan Chuen and Rosenfeld, Rogerio and Camacho, Hugo and Adame, Adrian G and Rosell, Aurelio Carnero and others},
+  journal={arXiv preprint arXiv:2209.07187},
+  year={2022}
+}
+
+@article{wilson2017rapid,
+  title={Rapid modelling of the redshift-space power spectrum multipoles for a masked density field},
+  author={Wilson, Michael J and Peacock, John A and Taylor, Andy N and de la Torre, Sylvain},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={464},
+  number={3},
+  pages={3121--3130},
+  year={2017},
+  publisher={Oxford University Press}
+}
+
+@article{beutler2014clustering,
+  title={The clustering of galaxies in the SDSS-III Baryon Oscillation Spectroscopic Survey: testing gravity with redshift space distortions using the power spectrum multipoles},
+  author={Beutler, Florian and Saito, Shun and Seo, Hee-Jong and Brinkmann, Jon and Dawson, Kyle S and Eisenstein, Daniel J and Font-Ribera, Andreu and Ho, Shirley and McBride, Cameron K and Montesano, Francesco and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={443},
+  number={2},
+  pages={1065--1089},
+  year={2014},
+  publisher={Oxford University Press}
+}
+
+
+@article{ade2019simons,
+  title={The Simons Observatory: science goals and forecasts},
+  author={Ade, Peter and Aguirre, James and Ahmed, Zeeshan and Aiola, Simone and Ali, Aamir and Alonso, David and Alvarez, Marcelo A and Arnold, Kam and Ashton, Peter and Austermann, Jason and others},
+  journal={Journal of Cosmology and Astroparticle Physics},
+  volume={2019},
+  number={02},
+  pages={056},
+  year={2019},
+  publisher={IOP Publishing}
 }
 
 @ARTICLE{wang2020,
@@ -173,6 +398,19 @@ archivePrefix = {arXiv},
 	title = {{The Target Selection Pipeline for the Dark Energy Spectroscopic Instrument}},
 	year = 2022}
 
+
+@article{chaussidon2022angular,
+  title={Angular clustering properties of the DESI QSO target selection using DR9 Legacy Imaging Surveys},
+  author={Chaussidon, Edmond and Y{\`e}che, Christophe and Palanque-Delabrouille, Nathalie and de Mattia, Arnaud and Myers, Adam D and Rezaie, Mehdi and Ross, Ashley J and Seo, Hee-Jong and Brooks, David and Gazta{\~n}aga, Enrique and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={509},
+  number={3},
+  pages={3904--3923},
+  year={2022},
+  publisher={Oxford University Press}
+}
+
+
 @article{slosar2008constraints,
 	author = {Slosar, An{\v{z}}e and Hirata, Christopher and Seljak, Uro{\v{s}} and Ho, Shirley and Padmanabhan, Nikhil},
 	date-added = {2022-09-12 14:07:27 -0400},
@@ -302,6 +540,71 @@ archivePrefix = {arXiv},
 	volume = {501},
 	year = {2021}}
 
+@article{eisenstein2001spectroscopic,
+  title={Spectroscopic target selection for the Sloan Digital Sky Survey: The Luminous red galaxy sample},
+  author={Eisenstein, Daniel J and Annis, James and Gunn, James E and Szalay, Alexander S and Connolly, Andrew J and Nichol, RC and Bahcall, Neta A and Bernardi, Mariangela and Burles, Scott and Castander, Francisco J and others},
+  journal={The Astronomical Journal},
+  volume={122},
+  number={5},
+  pages={2267},
+  year={2001},
+  publisher={IOP Publishing}
+}
+
+@article{prakash2016sdss,
+  title={The SDSS-IV extended baryon oscillation spectroscopic survey: luminous red galaxy target selection},
+  author={Prakash, Abhishek and Licquia, Timothy C and Newman, Jeffrey A and Ross, Ashley J and Myers, Adam D and Dawson, Kyle S and Kneib, Jean-Paul and Percival, Will J and Bautista, Julian E and Comparat, Johan and others},
+  journal={The Astrophysical Journal Supplement Series},
+  volume={224},
+  number={2},
+  pages={34},
+  year={2016},
+  publisher={IOP Publishing}
+}
+
+@article{alam2021completed,
+  title={Completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey: Cosmological implications from two decades of spectroscopic surveys at the Apache Point Observatory},
+  author={Alam, Shadab and Aubert, Marie and Avila, Santiago and Balland, Christophe and Bautista, Julian E and Bershady, Matthew A and Bizyaev, Dmitry and Blanton, Michael R and Bolton, Adam S and Bovy, Jo and others},
+  journal={Physical Review D},
+  volume={103},
+  number={8},
+  pages={083533},
+  year={2021},
+  publisher={APS}
+}
+
+@article{zou2017project,
+  title={Project overview of the beijing--arizona sky survey},
+  author={Zou, Hu and Zhou, Xu and Fan, Xiaohui and Zhang, Tianmeng and Zhou, Zhimin and Nie, Jundan and Peng, Xiyan and McGreer, Ian and Jiang, Linhua and Dey, Arjun and others},
+  journal={Publications of the Astronomical Society of the Pacific},
+  volume={129},
+  number={976},
+  pages={064101},
+  year={2017},
+  publisher={IOP Publishing}
+}
+
+@article{flaugher2015dark,
+  title={The dark energy camera},
+  author={Flaugher, Brenna and Diehl, HT and Honscheid, K and Abbott, TMC and Alvarez, O and Angstadt, R and Annis, JT and Antonik, M and Ballester, O and Beaufore, L and others},
+  journal={The Astronomical Journal},
+  volume={150},
+  number={5},
+  pages={150},
+  year={2015},
+  publisher={IOP Publishing}
+}
+
+@article{abbott2016dark,
+  title={The Dark Energy Survey: more than dark energy--an overview},
+  author={Abbott, Timothy and Abdalla, Filipe B and Aleksi{\'c}, J and Allam, S and Amara, Adam and Bacon, D and Balbinot, Eduardo and Banerji, M and Bechtol, Keith and Benoit-L{\'e}vy, Aur{\'e}lien and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={460},
+  number={2},
+  pages={1270--1299},
+  year={2016},
+  publisher={Oxford University Press}
+}
 
 @article{zhou2022target,
   title={Target Selection and Validation of DESI Luminous Red Galaxies},
